# tldr

./: LICENSE.txt  README.md  pyproject.toml
src/tldr/: __about__.py  __init__.py  main.py  plan.txt
