[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tldr"
# dynamic = ["version"]
version = "0.1.0"
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "Knut Arne Smeland", email = "knutasm@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "rich>=13.9.4",
]

[tool.hatch.envs.default]
installer = "uv"


[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true

[project.urls]
Documentation = "https://github.com/Knut Arne Smeland/tldr#readme"
Issues = "https://github.com/Knut Arne Smeland/tldr/issues"
Source = "https://github.com/Knut Arne Smeland/tldr"

[tool.hatch.version]
path = "src/tldr/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/tldr tests}"

[tool.coverage.run]
source_pkgs = ["tldr", "tests"]
branch = true
parallel = true
omit = [
  "src/tldr/__about__.py",
]

[tool.coverage.paths]
tldr = ["src/tldr", "*/tldr/src/tldr"]
tests = ["tests", "*/tldr/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "commitizen>=3.31.0",
]
